[LH-51] Implement static method to create Dto